force-app/main/default/objects/DevCore__BisnodeChange__e/DevCore__BisnodeChange__e.object-meta.xml
<CustomObject>
    <label>Bisnode Change</label>
    <pluralLabel>Bisnode Changes</pluralLabel>
</CustomObject>