force-app/main/default/objects/DevCore__BisnodeChange__e/fields/DevCore__Change_Type__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Change_Type__c</fullName>
    <description>&quot;unchanged&quot;, &quot;updated&quot; or &quot;removed&quot;</description>
    <label>Change Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>