force-app/main/default/objects/DevCore__BisnodeChange__e/fields/DevCore__Changed_Fields__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Changed_Fields__c</fullName>
    <description>Semi-colon separated list of fields changed</description>
    <label>Changed Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>