force-app/main/default/objects/DevCore__BisnodeChange__e/fields/DevCore__Employment_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Employment_Update_Date__c</fullName>
    <label>Employment Update Date</label>
    <type>DateTime</type>
</CustomField>