force-app/main/default/objects/DevCore__BisnodeChange__e/fields/DevCore__Employment_Update_Type__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Employment_Update_Type__c</fullName>
    <description>&quot;addition&quot; or &quot;removal&quot;</description>
    <label>Employment Update Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>