force-app/main/default/objects/DevCore__BisnodeChange__e/fields/DevCore__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Object_Type__c</fullName>
    <description>Company, Worksite or Employment</description>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>